# tortillas

./: '  CONTRIBUTING.md  Cargo.toml  README.md  rustfmt.toml
.config/: nextest.toml
.github/workflows/: checks.yml  release.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/libtortillas/: Cargo.toml
crates/libtortillas/examples/: live_frontend.rs
crates/libtortillas/src/: ARCHITECTURE.md  errors.rs  facade.rs  hashes.rs  lib.rs  settings.rs  util.rs
crates/libtortillas/src/dht/: actor.rs  announce.rs  compact.rs  id.rs  lookup.rs  message.rs  messages.rs  mod.rs  peers.rs  routing.rs  state.rs  token.rs  transaction.rs  transport.rs
crates/libtortillas/src/engine/: actor.rs  messages.rs  mod.rs  snapshot.rs  source.rs
crates/libtortillas/src/frontend/: command.rs  event.rs  handle.rs  listener.rs  live.rs  mod.rs  publisher.rs  subscription.rs  view.rs
crates/libtortillas/src/metainfo/: file.rs  magnet.rs  mod.rs
crates/libtortillas/src/parser/: file.rs  magnet.rs  mod.rs
crates/libtortillas/src/peer/: actor.rs  id.rs  info.rs  mod.rs  state.rs  supports.rs
crates/libtortillas/src/peers/: commands.rs  messages.rs  mod.rs  stream.rs  tcp.rs  transport.rs  transport_messages.rs  utp.rs  webrtc.rs
crates/libtortillas/src/peers/peer/: id.rs  info.rs  mod.rs  state.rs  supports.rs
crates/libtortillas/src/peers/peer_comms/: commands.rs  messages.rs  mod.rs  stream.rs
crates/libtortillas/src/peers/utp/: manager.rs  mod.rs
crates/libtortillas/src/pieces/: mod.rs  piece_manager.rs  piece_scheduler.rs  piece_store.rs
crates/libtortillas/src/protocol/: commands.rs  messages.rs  mod.rs  stream.rs
crates/libtortillas/src/torrent/: actor.rs  block.rs  choking.rs  choking_flow.rs  discovery.rs  export.rs  handle.rs  messages.rs  mod.rs  piece.rs  piece_flow.rs  piece_manager.rs  snapshot.rs  state.rs  storage.rs  swarm.rs  util.rs
crates/libtortillas/src/tracker/: actor.rs  http.rs  messages.rs  mod.rs  model.rs  stats.rs  udp.rs  wss.rs
crates/libtortillas/tests/: dht_network.rs  engine_lifecycle.rs  facade.rs  live_frontend.rs  persistence.rs
crates/libtortillas/tests/magneturis/: cachyos-desktop-linux-250713.txt  test1.txt  wired-cd.txt
crates/libtortillas/tests/torrents/: archlinux-2026.07.01-x86_64.iso.torrent
crates/tortillas/: Cargo.toml
crates/tortillas/src/: main.rs
docs/: frontend-integration.md
lib/: Cargo.toml
lib/src/: errors.rs  hashes.rs  lib.rs
lib/src/parser/: file.rs  magnet.rs  mod.rs
lib/src/peers/: messages.rs  mod.rs  utp.rs
lib/src/tracker/: http.rs  mod.rs  udp.rs
lib/tests/magneturis/: zenshuu.txt
