[workspace]
resolver = "2"
members = ["crates/tortillas", "crates/libtortillas"]

[workspace.package]
authors = [
   "Artrix <sefu786@outlook.com>",
   "kurealnum <oscar.gaske.cs@gmail.com>",
]

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
