[package]
name = "libtortillas"
license = "MPL-2.0"
version = "0.0.0"
edition = "2024"
description = "An asynchronous library based on the actor model for interacting with the BitTorrent protocol"
repository = "https://github.com/artrixdotdev/tortillas"
keywords = ["bittorrent", "p2p", "torrent"]
categories = ["network-programming", "concurrency"]
readme = "../../README.md"


[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
atomic-time = "0.1"
serde_bencode = "^0.2.4"
serde-querystring = "0.3.0"
sha1 = "0.10.6"
hex = "0.4.3"
reqwest = "0.12.13"
serde_repr = "0.1.20"
rand = "0.9.0"
num_enum = "0.7.3"
tokio-stream = "0.1"
thiserror = "2.0.12"
async-trait = "0.1.88"
librqbit-utp = "0.6.2"
bitvec = "1.0.1"
futures = "0.3"
bencode = "0.1.16"
serde_with = "3.14.0"
tokio-retry2 = { version = "0.5.7", features = ["tracing"] }
async-stream = "0.3.6"
bytes = "1"
kameo = "0.17"
dashmap = "6.1.0"
bon = "3.7.1"

[dev-dependencies]
tracing-test = "0.2.5"
