[package]
name = "libtortillas"
license = "MPL-2.0"
version = "0.0.0"
edition = "2024"
description = "An asynchronous library based on the actor model for interacting with the BitTorrent protocol"
repository = "https://github.com/artrixdotdev/tortillas"
keywords = ["bittorrent", "p2p", "torrent"]
categories = ["network-programming", "concurrency"]
readme = "../../README.md"


[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
atomic-time = "^0.1"
serde_bencode = "^0.2"
serde-querystring = "^0.3"
sha1 = "^0.10"
hex = "^0.4.3"
reqwest = "^0.12"
serde_repr = "^0.1"
rand = "^0.9"
num_enum = "^0.7"
thiserror = "^2.0"
async-trait = "^0.1"
librqbit-utp = "^0.6"
bitvec = { version = "^1.0", features = ["serde", "alloc", "atomic"] }
futures = "^0.3"
bencode = "^0.1"
serde_with = "^3.14"
tokio-retry2 = { version = "^0.6", features = ["tracing"] }
bytes = "^1"
kameo = "^0.18"
dashmap = "^6.1"
bon = "^3.7"
tokio-util = "^0.7"

[dev-dependencies]
tracing-test = "0.2.5"
tracing-subscriber = { workspace = true }
